assets/css/main.css
/* ... */
.page-header__search {
    -webkit-box-flex: 1;
    -ms-flex-positive: 1;
    display: block;
    position: relative;
    flex-grow: 1;
}

.page-header__action {
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-box-pack: end;
    -ms-flex-pack: end;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.page-header__action > * {
    margin-right: 24px;
}

.page-header__action > *:last-child {
    margin-right: 0;
}

.action-btn {
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-box-flex: 0;
    -ms-flex: 0 0 24px;
    -webkit-transition: all 0.25s linear;
    -o-transition: all 0.25s linear;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    position: relative;
    flex: 0 0 24px;
    align-items: center;
    justify-content: center;
    width: 24px;
    height: 24px;
    color: #646464;
    font-size: 24px;
    transition: all 0.25s linear;
}

.action-btn:hover {
    color: #F46119;
}

.action-btn span {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    width: 8px;
    height: 8px;
    border: 1px solid #FFFFFF;
    border-radius: 50%;
    background: #F46119;
}

.profile {
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-box-flex: 0;
    -ms-flex: 0 0 32px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    flex: 0 0 32px;
    align-items: center;
    justify-content: center;
    width: 32px;
    height: 32px;
}

.uk-modal-dialog {
    width: 450px;
    padding: 20px;
    border-radius: 15px;
    background: #FFFFFF;
}

.uk-modal-title {
    font-size: 24px;
    font-style: normal;
    font-weight: bold;
    line-height: 1.33;
    text-align: center;
    font-family: 'Marcellus', serif;
}

.uk-modal-close-default {
    border-radius: 50%;
    background: #D3D3D3;
    color: #000;
}

#modal-help h4 {
    color: #222;
    font-size: 18px;
    font-style: normal;
    font-weight: 500;
    line-height: 1.33;
}

#modal-help ul {
    motion: 0;
    padding: 0;
    list-style-type: none;
}

#modal-help ul li {
    -ms-flex-line-pack: center;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    align-content: center;
    color: #353535;
    font-size: 14px;
    font-style: normal;
    font-weight: normal;
    line-height: 1.36;
}

#modal-help ul li + li {
    margin-top: 20px;
}

#modal-help ul li img {
    margin-right: 10px;
}

#modal-help ul li a {
    color: #F46119;
    font-size: 14px;
    font-style: normal;
    font-weight: 600;
    line-height: 1.36;
    text-transform: capitalize;
}

.sidebar {
    -webkit-transition: all 0.25s linear;
    -o-transition: all 0.25s linear;
    display: block;
    z-index: 3;
    position: absolute;
    top: 75px;
    left: -250px;
    width: 250px;
    height: calc(100vh - 75px);
    padding: 30px 20px 30px 0;
    overflow-y: auto;
    border-right: 1px solid #F2F2F2;
    background-color: #fff;
    transition: all 0.25s linear;
}

.sidebar.is-show {
    left: 0;
}

.sidebar.is-show + .page-main {
    -webkit-transition: all 0.25s linear;
    -o-transition: all 0.25s linear;
    left: 250px;
    width: calc(100% - 250px);
    padding: 45px 45px;
    transition: all 0.25s linear;
}

.sidebar + .page-main {
    -webkit-transition: all 0.25s linear;
    -o-transition: all 0.25s linear;
    left: 0;
    width: 100%;
    padding: 45px 30px;
    transition: all 0.25s linear;
}

.sidebar-box {
    display: block;
    position: relative;
}

.sidebar-box .uk-nav li a {
    -webkit-box-pack: start;
    -ms-flex-pack: start;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-transition: all 0.25s linear;
    -o-transition: all 0.25s linear;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    position: relative;
    align-items: center;
    justify-content: flex-start;
    padding: 12px 12px 12px 30px;
    border-radius: 0px 20px 20px 0px;
    color: #646464;
    font-size: 14px;
    font-style: normal;
    font-weight: 700;
    line-height: 1.36;
    transition: all 0.25s linear;
}

.sidebar-box .uk-nav li a:hover,
.sidebar-box .uk-nav li a:focus,
.sidebar-box .uk-nav li a:active,
.sidebar-box .uk-nav li a.nice-select.open {
    background: rgba(244, 97, 25, 0.05);
    color: #F46119;
}

.sidebar-box .uk-nav li a:hover [class*='ico_'],
.sidebar-box .uk-nav li a:focus [class*='ico_'],
.sidebar-box .uk-nav li a:active [class*='ico_'],
.sidebar-box .uk-nav li a.nice-select.open [class*='ico_'] {
    color: #F46119;
}

.sidebar-box .uk-nav li a [class*='ico_'] {
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-box-flex: 0;
    -ms-flex: 0 0 24px;
    -webkit-transition: all 0.25s linear;
    -o-transition: all 0.25s linear;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    flex: 0 0 24px;
    align-items: center;
    justify-content: center;
    width: 24px;
    height: 24px;
    margin-right: 15px;
    color: #646464;
    font-size: 24px;
    transition: all 0.25s linear;
}

.sidebar-box .uk-nav li a::before {
    -webkit-transition: all 0.25s linear;
    -o-transition: all 0.25s linear;
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 5px;
    height: 100%;
    border-radius: 0px 5px 5px 0px;
    background: #F46119;
    content: '';
    opacity: 0;
    transition: all 0.25s linear;
}
/* ... */

